js/js.translator/testData/incremental/invalidation/jsCodeWithConstString/lib1/js.0.kt
fun test() : dynamic {
    return js("var testObj = { $constKey: 0 }; testObj.$constKey")
}
